fix: center contact icons container on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -233,7 +233,7 @@ hr {
   }
 
   .container {
-    width: 100%;
+    width: 305px;
   }
 
   .container > figure {
